Modified the PokerHand class to be more readable